Feat:fixing the ledger issues
